# ct_liver_process

./: .gitignore  Cargo.toml  README.md  pipeline.sh
detection/: Cargo.toml
detection/src/: lib.rs  main.rs
detection/src/subcmd_impls/: algo_bench.rs  args.rs  ct_window.rs  eroded_coefficient.rs  mod.rs  nii2npy.rs  paper_algos2npy.rs  paper_grid_gen.rs  png_batch.rs  rnpy2png.rs  rnpy2unique.rs  rnpy2unpy.rs  unpy2png.rs  utils.rs  verify.rs
label/: Cargo.toml
label/src/: lib.rs  prelude.rs
label/src/prep/: improc.rs  iter.rs  log.rs  mod.rs  pos.rs
label/src/prep_ffi/: improc.rs  iter.rs  mod.rs  pos.rs
label/src/prep_ffi/unix/: mod.rs
script/: __main__.py  canny.py  consts.py  preprocess.py  sci_interpolate.py
script/fitting/: powell_poly4.py
