[package]
name = "label"
version = "0.6.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cfg-if = "1.0.0"
json = "0.12.4"
ndarray = "0.15.6"
ndarray-npy = "0.8.1"
num_cpus = "1.13.1"
opencv = "0.71.0"
threadpool = "1.8.1"
